# pipelines

./: .gitignore  Cargo.toml  README.md  coz.sh  hyperfine.sh  stress.sh  stress_one.sh  throughput.sh
benches/: str.rs
src/: core.rs  lib.rs  main.rs  str.rs
src/sinks/: blackhole.rs  mod.rs  stdout.rs
src/sources/: stdin.rs
src/transforms/: mod.rs  space_counter.rs
