[package]
name = "pipeline"
version = "0.1.0"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"

[profile.release]
codegen-units = 1 # Increases compile time but improve optmization alternatives.
lto = true        # Optimize our binary at the link stage.
opt-level = 3     # Optimize for speed.
debug = true      # Leave debug symbols in the build.

[dependencies]
async-trait = "0.1"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.tokio-stream]
version = "0.1"
features = ["io-util"]

[dependencies.tokio]
version = "1.4"
features = ["full", "sync"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "str"
harness = false