[package]
name = "pipeline"
version = "0.1.0"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"

[profile.release]
codegen-units = 1 # Increases compile time but improve optmization alternatives.
lto = false       # Do not LTO, allows 'coz'
opt-level = 3     # Optimize for speed.
debug = true      # Leave debug symbols in the build.

[dependencies]
coz = "0.1"
async-trait = "0.1"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.futures-util]
version = "0.3"
default-features = true

[dependencies.tokio-stream]
version = "0.1"
features = ["io-util"]

[dependencies.tokio]
version = "1.4"
features = ["full", "sync"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "str"
harness = false