[package]
name = "pipeline"
version = "0.1.0"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"

[profile.release]
codegen-units = 1 # Increases compile time but improve optmization alternatives.
lto = true        # Perform link-time optimization of program.
opt-level = 3     # Optimize for speed.
debug = true      # Leave debug symbols in the build.

[dependencies]
async-trait = "0.1"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.futures-util]
version = "0.3"
default-features = true

[dependencies.tokio]
version = "1.4"
features = ["rt", "rt-multi-thread", "io-std", "io-util", "process", "sync"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "str"
harness = false